--- a/lesson-plans/week-0/18may2025.md
+++ b/lesson-plans/week-0/18may2025.md
@@ -1,9 +1,26 @@
-share day in the life of
-gauge current knowledge level
-review core-concepts
-make a note of any words or concepts you don't understand or are uncertain about
-create github account
-fork your own copy of this repo https://github.com/kristinahunter/mentee-resources
-clone it locally
-in projects, create a file with this list
+# May 18, 2025 - Week 0 Kickoff
 
+## Session Agenda
+
+1. **Share Day in the Life of**
+   - Overview of daily activities
+   - Common challenges and tasks
+
+2. **Gauge Current Knowledge Level**
+   - Assessment of existing skills
+   - Identify areas for focus
+
+3. **Review Core Concepts**
+   - Read through core-concepts.md
+   - Make a note of any words or concepts you don't understand or are uncertain about
+
+## Assignments
+
+### 1. GitHub Setup
+- Create GitHub account
+- Fork your own copy of this repo: https://github.com/kristinahunter/mentee-resources
+- Clone it locally
+
+### 2. Create Project File
+- In the `projects` directory, create a file with the list of unfamiliar concepts
+- Document any questions that arose during the core concepts review
