--- a/lesson-plans/week-0/18may2025.md
+++ b/lesson-plans/week-0/18may2025.md
@@ -19,8 +19,11 @@
 ### 1. GitHub Setup
 - Create GitHub account
 - Fork your own copy of this repo: https://github.com/kristinahunter/mentee-resources
-- Clone it locally
+- Clone it locally (you'll need to install git for this)
+- Make notes of any command you're using for the first time, any roadblocks, and how you overcame them
 
 ### 2. Create Project File
 - In the `projects` directory, create a file with the list of unfamiliar concepts
-- Document any questions that arose during the core concepts review
+- Commit this file to your github repo
+- Verify you can view your changes on the web
+- 
