--- a/lesson-plans/week-0/18may2025.md
+++ b/lesson-plans/week-0/18may2025.md
@@ -26,4 +26,4 @@
 - In the `projects` directory, create a file with the list of unfamiliar concepts
 - Commit this file to your github repo
 - Verify you can view your changes on the web
-- 
+- Update your file locally with the new commands you've learned, and push the changes to the repo
